# boolean-solutor

./: CMakeLists.txt
src/: BooleanSolutor.cpp  BooleanSolutor.h  config.h.in  log4c.properties  main.cpp
